<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_experiment"
        android:fontFamily="@font/merriweather_bold"
        android:textSize="24sp"
        android:textColor="@color/text_black"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_regular"
        android:hint="@string/experiment_name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/exp_name"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_regular"
        android:hint="@string/tester"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/tester"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_regular"
        android:hint="@string/scheduled_sunrise"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/sunrise"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/start_experiment"
        android:textSize="20sp"
        android:fontFamily="@font/merriweather_regular"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/button_style"
        android:id="@+id/submit_button_list" />
</LinearLayout>