<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="16dp"
                  android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_task"
            android:fontFamily="@font/merriweather_bold"
            android:textColor="#000000"
            android:textSize="24sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:fontFamily="@font/merriweather_regular"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:fontFamily="@font/merriweather_regular"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:datePickerMode="calendar" />

        <Button
            android:id="@+id/submit_button_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/add"
            android:textSize="20sp"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
