<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dialog_style">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_task"
            android:textSize="24sp"
            android:textColor="@color/text_black"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/merriweather_bold"
            android:gravity="center"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/name_et"
            android:autofillHints=""
            android:fontFamily="@font/merriweather_regular"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/description_et"
            android:fontFamily="@font/merriweather_regular"
            android:autofillHints="" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            android:textColor="@color/primaryTextColor"
            android:background="@drawable/button_style"
            android:id="@+id/submit_button_edit"
            android:fontFamily="@font/merriweather_regular" />
    </LinearLayout>
</ScrollView>

